--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,12 @@ android {
 
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -37,5 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.android.gms:play-services-vision:20.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.aryarohit07:picasso-facedetection-transformation:0.3.0'
 }
